crates/wgso/tests/cases_invalid/invalid_wgsl_with_imports/.expected
error: expected global item (`struct`, `const`, `var`, `alias`, `fn`, `diagnostic`, `enable`, `requires`, `;`) or the end of the file, found "invalid"
 --> ./tests/cases_invalid/invalid_wgsl_with_imports/invalid.wgsl:5:1
  |
5 | invalid
  | ^^^^^^^ expected global item (`struct`, `const`, `var`, `alias`, `fn`, `diagnostic`, `enable`, `requires`, `;`) or the end of the file
  |